# Squid2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  STYLE.md  imgui.ini  profile.res
Assets/Shaders/: compile.bat  compile.sh  frag.spv  imgui.frag.spv  imgui.hlsl  imgui.vert.spv  shader.comp  unlit.frag.spv  unlit.hlsl  unlit.vert.spv  vert.spv
Editor/EditorCore/: CMakeLists.txt  pch.h
Editor/EditorCore/Public/EditorCore/: Module.h
Editor/EditorCore/Source/: Editor.cpp  Editor.h  IconProvider.hs  Module.cpp
Editor/EditorCore/Source/ImGui/: imgui_impl_rhi.h
Editor/EditorCore/Source/Widgets/: Dockspace.cpp  Dockspace.h  LogWidget.cpp  LogWidget.h  PropertiesWidget.cpp  PropertiesWidget.h  SceneWidget.cpp  SceneWidget.h  ViewportWidget.cpp  ViewportWidget.h  Widget.h
Runtime/Core/: CMakeLists.txt  pch.h
Runtime/Core/Public/Core/: FileDialog.h  FileSystem.h  FileWatcher.h  Log.h  Murmur.h  Profiling.h  Random.h  RingBuffer.h  Types.h
Runtime/Core/Public/Core/ECS/: ComponentRegistry.h  Entity.h  HierarchyComponent.h  Scene.h  TransformComponent.h
Runtime/Core/Public/Core/Events/: Event.h  SystemEvents.h
Runtime/Core/Public/Core/Modules/: EngineContext.h  IModule.h  ModuleManager.h
Runtime/Core/Source/: FileWatcher.cpp  Log.cpp  Profiling.cpp  Random.cpp
Runtime/Core/Source/ECS/: Scene.cpp
Runtime/Core/Source/Modules/: EngineContext.cpp  ModuleManager.cpp
Runtime/Launch/: CMakeLists.txt  pch.h
Runtime/Launch/Source/: EngineLoop.cpp  EngineLoop.h  main.cpp
Runtime/RHI/: CMakeLists.txt
Runtime/RHI/Public/RHI/: Commands.h  Device.h  Handles.h  Module.h  RayTracing.h
Runtime/RenderGraph/: CMakeLists.txt  pch.h
Runtime/RenderGraph/Public/RenderGraph/: Builder.h  Graph.h  Pass.h  Resource.h
Runtime/RenderGraph/Source/: Graph.cpp
Runtime/Renderer/: CMakeLists.txt
Runtime/Renderer/Public/Renderer/: Mesh.h  Module.h  TextureImporter.h
Runtime/Renderer/Source/: Mesh.cpp  Module.cpp
Runtime/Renderer/Source/Passes/: GbufferPass.h  PbrPass.h  PresentPass.h
Runtime/VulkanRHI/: CMakeLists.txt  pch.h
Runtime/VulkanRHI/Source/: Buffer.cpp  Buffer.h  CommandAllocator.cpp  CommandAllocator.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  FboCache.cpp  FboCache.h  Module.cpp  Module.h  Pipeline.cpp  Pipeline.h  Raw.h  RenderTarget.cpp  RenderTarget.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
